[tool.poetry]
name = "llamagym"
version = "0.1.1"
description = "Fine-tune LLM agents with online reinforcement learning"
authors = ["Rohan Pandey"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.36.2"
gymnasium = "^0.29.1"
scipy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
